Add skim to dmgs.

--- a/dmgs.yml
+++ b/dmgs.yml
@@ -18,5 +18,11 @@ dmgs_to_download_and_install:
   - app_name: Discord
     dmg_url: https://discordapp.com/api/download?platform=osx
 
+  - app_name: Docker
+    dmg_url: https://download.docker.com/mac/stable/Docker.dmg
+
+  - app_name: Skim
+    dmg_url: "https://sourceforge.net/projects/skim-app/files/Skim/Skim-{{ skim_version }}/Skim-{{ skim_version }}.dmg/download"
+
     # TODO VLC seems not to have a "latest" link. Find latest somehow?
-    # TODO ditto parallels, vagrant, docker. docker also wants you to be logged in...
+    # TODO ditto parallels, vagrant.
