Move mas to ports. Looks like it's updated and working again.

--- a/playbook.yml
+++ b/playbook.yml
@@ -73,6 +73,11 @@
 
       - include_role:
           name: xquartz
+          apply:
+            tags:
+              - xquartz
+        tags:
+          - xquartz
 
       - include_role:
           name: mactex
