Move macports up (need ports before mas apps now). Move path manipulation for macports to role.

--- a/roles/macports/tasks/main.yml
+++ b/roles/macports/tasks/main.yml
@@ -16,4 +16,19 @@
       command: "installer -pkg {{ downloads }}/macports.pkg -target /"
       become: yes
 
+    - name: Add MacPorts to path
+      lineinfile:
+        line: /opt/local/bin
+        path: /etc/paths
+        state: present
+        insertbefore: /usr/local/bin
+      become: yes
+
+    - name: Add MacPorts to path
+      lineinfile:
+        line: /opt/local/sbin
+        path: /etc/paths
+        state: present
+        insertbefore: /usr/local/bin
+      become: yes
   when: not (throwaway.stat.executable is defined and throwaway.stat.executable)
