Add missing 'become: yes' when installing from .pkg

--- a/roles/install_from_dmg/tasks/main.yml
+++ b/roles/install_from_dmg/tasks/main.yml
@@ -34,6 +34,7 @@
     - name: Install package
       command: "installer -pkg '/Volumes/{{ app_name }}/{{ install_method }}' -target /"
       when: install_method is regex('^.*\.pkg$')
+      become: yes
 
   always:
     - include_role:
