Add cowsay, but disable it in config for this playbook.

--- a/ports.yml
+++ b/ports.yml
@@ -6,6 +6,7 @@ ports_to_install:
     bash-completion:
     bison:
     coreutils:
+    cowsay:
     editorconfig-core-c:
     flex:
     gawk: +mpfr
