--- a/roles/iterm2/tasks/main.yml
+++ b/roles/iterm2/tasks/main.yml
@@ -1,11 +1,18 @@
+# Download and install iTerm2
 ---
 - stat:
     path: "{{ iterm2_app_path }}/{{ iterm2_app_name }}.app"
   register: throwaway
 
 - block:
-    - name: Install iTerm2
+    - name: Download iTerm2
+      get_url:
+        url:  "https://iterm2.com/downloads/stable/iTerm2-{{ iterm2_version | replace('.', '_') }}.zip"
+        dest: "{{ downloads }}/iterm2.zip"
+    - name: Unzip iTerm2
       unarchive:
-        src: "https://iterm2.com/downloads/stable/iTerm2-{{ iterm2_version | replace('.', '_') }}.zip"
-        dest: "{{ iterm2_app_path }}/ {{ iterm2_app_name }}.app"
+        dest: "{{ downloads }}"
+        src: "{{ downloads }}/iterm2.zip"
+    - name: Install iTerm2
+      command: "mv {{ downloads }}/{{ iterm2_app_name }}.app {{ iterm2_app_path }}"
   when: not (throwaway.stat.isdir is defined and throwaway.stat.isdir)
