--- a/roles/postman/tasks/main.yml
+++ b/roles/postman/tasks/main.yml
@@ -5,8 +5,14 @@
   register: throwaway
 
 - block:
-    - name: Install Postman
+    - name: Download Postman
+      get_url:
+        url:  "https://dl.pstmn.io/download/latest/osx"
+        dest: "{{ downloads }}/postman.zip"
+    - name: Unzip Postman
       unarchive:
-        dest: "{{ postman_app_path }}/{{ postman_app_name }}.app"
-        src: https://dl.pstmn.io/download/latest/osx
+        dest: "{{ downloads }}"
+        src: "{{ downloads }}/postman.zip"
+    - name: Install Postman
+      command: "mv {{ downloads }}/Postman.app {{ postman_app_path }}"
   when: not (throwaway.stat.isdir is defined and throwaway.stat.isdir)
