--- a/roles/launchd/tasks/main.yml
+++ b/roles/launchd/tasks/main.yml
@@ -1,3 +1,5 @@
 ---
 - name: Enable location database
   commnand: launchctl load -w /System/Library/LaunchDaemons/com.apple.locate.plist
+  become: yes
+
