--- a/ports.yml
+++ b/ports.yml
@@ -2,6 +2,7 @@
 ---
 ports_to_install:
     autoconf:
+    autossh:
     bash:
     bash-completion:
     bison:
@@ -13,12 +14,11 @@ ports_to_install:
     getopt:
     gmake:
     gmp: +native
-#    graphviz: +guile +pangocairo +poppler +rsvg +x11
-#    graphviz-gui:
+    graphviz: +guile +pangocairo +poppler +rsvg +x11
+    graphviz-gui:
     gwhich:
     gzip:
-#    ImageMagick: +graphviz +pango +svrg +wmf +x11
-    ImageMagick: +pango +svrg +wmf +x11
+    ImageMagick: +graphviz +pango +svrg +wmf +x11
 #  needed for native json support in emacs.
     jansson:
     jq:
