--- a/roles/emacs/tasks/main.yml
+++ b/roles/emacs/tasks/main.yml
@@ -7,18 +7,15 @@
     repo: https://github.com/emacs-mirror/emacs
     dest: "{{ emacs_src_dir }}"
 
+# Standalone step can fail with "New Mach-O header is too large to relocate" without LDFLAGS.
+# https://py2app.readthedocs.io/en/latest/faq.html
+# Vaguely related: https://ylluminarious.github.io/2019/06/13/how-i-solved-a-cryptic-emacs-dumping-error/
+# Interestingly, configure will fail if LDFLAGS is set via LDFLAGS=... ./configure, or if it's done via
+# `environment:` on ansible's command module.
 - name: Configure emacs
   shell: |-
-    # Standalone step can fail with "New Mach-O header is too large to relocate" without this.
-    # https://py2app.readthedocs.io/en/latest/faq.html
-    # Vaguely related: https://ylluminarious.github.io/2019/06/13/how-i-solved-a-cryptic-emacs-dumping-error/
-    # Interestingly, configure will fail if LDFLAGS is set via LDFLAGS=... ./configure, or if it's done via
-    # `environment:` on ansible's command module.
-    #
     export LDFLAGS=-Wl,-headerpad_max_install_names
-
     ./configure
-
   args:
     chdir: "{{ emacs_src_dir }}"
 
