--- a/ports.yml
+++ b/ports.yml
@@ -46,3 +46,7 @@ ports_to_install:
     ffmpeg: +nonfree +x11 +gpl3
     sox:
     xmlsec:
+
+ports_to_select:
+    maven: maven3
+    postgresql: postgresql12
