Don't assume port is on the path, or that the command task can find it.

--- a/tasks/install_ports.yml
+++ b/tasks/install_ports.yml
@@ -19,6 +19,6 @@
   with_dict: "{{ ports_to_install }}"
 
 - name: Select port
-  command: "port select {{ item.key }} {{ item.value }}"
+  command: "/opt/local/bin/port select {{ item.key }} {{ item.value }}"
   become: yes
   with_dict: "{{ ports_to_select }}"
